<resources>
    <string name="app_name">SlotMaster</string>
    <string name="play_btn">Play</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="auth_button"></string>
    <string name="spin_button">Spin</string>
    <string name="score_txt">Score:</string>
    <string name="times_txt">Attempts:</string>
    <string name="spin_times_txt"></string>
    <string name="display_score_txt"></string>
    <string name="top_score_text">Top Score Players</string>
</resources>
